doc: documentation user
